work for navbar

--- a/index.html
+++ b/index.html
@@ -8,21 +8,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
+    crossorigin="anonymous">
 
 
 </head>
 
 <body>
-    <header id="showcase">
-        <div class="content">
-            <h1>Lab Art Media Works</h1>
 
-            <blockquote>Everything you can imagine is real.
-                <br>
-                <span class="author"> Pablo Picasso
-                </span>
-            </blockquote>
+    <header id="showcase">
+        <nav>
+            <div class="logo">LabArts</div>
+            <div class="menu_icon" onclick="toggleMenu(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+            <ul class="menu">
+                <li>
+                    <a href="#" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="work.html">Work</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+            <div class="clearfix"></div>
+        </nav>
+        <div class="showdata">
+            <div class="content">
+                <h1>Lab Art Media Works</h1>
+
+                <blockquote>Everything you can imagine is real.
+                    <br>
+                    <span class="author"> Pablo Picasso
+                    </span>
+                </blockquote>
+            </div>
         </div>
 
 
@@ -99,11 +122,13 @@
 
         <section id="about">
             <div class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore architecto dicta tempora quas eligendi molestias facilis nostrum molestiae, omnis dolor voluptas est culpa hic! Placeat beatae maiores asperiores minima magnam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore architecto dicta tempora quas eligendi
+                molestias facilis nostrum molestiae, omnis dolor voluptas est culpa hic! Placeat beatae maiores
+                asperiores minima magnam.
             </div>
         </section>
 
-      
+
 
         <section class="latest">
             <div class="title"> Our Latest Work </div>
@@ -152,15 +177,15 @@
     <div class="clearfix"></div>
     <footer>
         <div>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram"></i>
-                <br>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <br>
             123456789
             <br><br>
             email@gmail.com
             <br><br>
             &copy;2019 Lab art Media Works
-        
+
         </div>
     </footer>
 </body>
