--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section id="work">
             <div class="content">
                 Get Your next Album art
-                in very cheep price.
+                in very cheap price.
                 <br>
                 <a href="#" class="btn btn-small"> More</a>
 
@@ -103,13 +103,13 @@
 
 
             <div class="show-work">
-                <img src="images/artwork1.jpeg" alt="artwork">
+                <img src="images/svg/image_post.svg" alt="artwork">
             </div>
         </section>
 
         <section id="cover">
             <div class="cover-work">
-                <img src="images/coverart.jpeg" alt="Cover Art">
+                <img src="images/svg/creativity.svg" alt="Cover Art">
             </div>
             <div class="content">
                 Get Awesome Album Cover for youtube
