change navbar color on scroll

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header id="showcase">
-        <nav>
+        <nav id="navbar">
             <div class="logo">LabArts</div>
             <div class="menu_icon" onclick="toggleMenu(this)">
                 <div class="bar1"></div>
