--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="clearfix"></div>
         </nav>
         <div class="showdata">
-            <div class="content">
+            <div class="tagline">
                 <h1>Lab Art Media Works</h1>
 
                 <blockquote>Everything you can imagine is real.
@@ -94,9 +94,12 @@
         <!-- <div class="clearfix"></div> -->
         <section id="work">
             <div class="content">
-                Get Your next Album art
-                in very cheap price.
-                <br>
+                
+                <h1>Album Art</h1>
+                <span>With over 4 years of professional work experience Our team create 
+                   art for you with affordable prices.
+                </span>
+
                 <a href="#" class="btn btn-small"> More</a>
 
             </div>
@@ -112,15 +115,17 @@
                 <img src="images/svg/creativity.svg" alt="Cover Art">
             </div>
             <div class="content">
-                Get Awesome Album Cover for youtube
-                and facebook.
-
+                <h1>Cover Art</h1>
+                <span>Create your awesome cover art for your next upcoming album or 
+                    Event.
+                </span>
                 <br>
                 <a href="#" class="btn btn-small"> More</a>
             </div>
         </section>
 
         <section id="about">
+            
             <div class="content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore architecto dicta tempora quas eligendi
                 molestias facilis nostrum molestiae, omnis dolor voluptas est culpa hic! Placeat beatae maiores
@@ -128,7 +133,15 @@
             </div>
         </section>
 
+        <section id="contact">
+          <h1> Still Confused?</h1>
+          <span>
+              We Will help you to create your dream project.
 
+          </span>
+          <br>
+          <a href="contact.html" class="btn-green">Contact</a>
+         </section>
 
         <section class="latest">
             <div class="title"> Our Latest Work </div>
