--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Lab Art Media Works</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous">
@@ -15,6 +16,7 @@
 
 <body>
 
+    <div class="preloader"></div>
     <header id="showcase">
         <nav id="navbar">
             <div class="logo">LabArts</div>
@@ -155,9 +157,9 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/logo2.jpeg" alt="">
+                    <img src="images/artwork1.jpeg" alt="">
                     <div class="middle">
-                        <div class="text">Logo</div>
+                        <div class="text">Art</div>
                     </div>
                 </div>
                 <div class="card">
@@ -166,12 +168,7 @@
                         <div class="text">Sooraj</div>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="images/logo1.jpeg" alt="">
-                    <div class="middle">
-                        <div class="text">Logo</div>
-                    </div>
-                </div>
+               
                 <div class="card">
                     <img src="images/artwork5.jpeg" alt="">
                     <div class="middle">
@@ -203,6 +200,7 @@
     </footer>
 </body>
 <script src="https://unpkg.com/scrollreveal"></script>
+<script src="js/all.js"></script>
 <script src="js/main.js"></script>
 
 </html>
