--- a/work.html
+++ b/work.html
@@ -42,8 +42,8 @@
         <div class="row">
 
 
-            <div class="card">
-                <div class="wrapper">
+            <div class="card" >
+                <div class="wrapper" data-image-src="./images/artwork1.jpeg">
                     <div class="header">
                         <div class="date">12-01-2019</div>
                     </div>
@@ -57,7 +57,7 @@
 
 
             <div class="card">
-                <div class="wrapper">
+                <div class="wrapper" data-image-src="./images/artwork2.jpeg">
                     <div class="header">
                         <div class="date">12-01-2019</div>
                     </div>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="card">
-                    <div class="wrapper">
+                    <div class="wrapper" data-image-src="./images/artwork3.jpeg">
                         <div class="header">
                             <div class="date">12-01-2019</div>
                         </div>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="card">
-                        <div class="wrapper">
+                        <div class="wrapper" data-image-src="./images/artwork4.jpeg">
                             <div class="header">
                                 <div class="date">12-01-2019</div>
                             </div>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="card">
-                            <div class="wrapper">
+                            <div class="wrapper" data-image-src="./images/artwork5.jpeg">
                                 <div class="header">
                                     <div class="date">12-01-2019</div>
                                 </div>
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                         <div class="card">
-                                <div class="wrapper">
+                                <div class="wrapper" data-image-src="./images/artwork1.jpeg">
                                     <div class="header">
                                         <div class="date">12-01-2019</div>
                                     </div>
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                             <div class="card">
-                                    <div class="wrapper">
+                                    <div class="wrapper" data-image-src="./images/artwork1.jpeg">
                                         <div class="header">
                                             <div class="date">12-01-2019</div>
                                         </div>
@@ -130,7 +130,7 @@
                                     </div>
                                 </div>
                                 <div class="card">
-                                        <div class="wrapper">
+                                        <div class="wrapper" data-image-src="./images/artwork1.jpeg">
                                             <div class="header">
                                                 <div class="date">12-01-2019</div>
                                             </div>
