--- a/work.html
+++ b/work.html
@@ -38,109 +38,12 @@
 
 
     <div class="container">
-
+        <div class="work-category">
+            <a href="#" class="categort btn-primary" id="art">Art Work</a>
+            <a href="#" class="categort btn-primary" id="cover">Cover</a>
+        </div>
         <div class="row">
 
-
-            <div class="card" >
-                <div class="wrapper" data-image-src="./images/artwork1.jpeg">
-                    <div class="header">
-                        <div class="date">12-01-2019</div>
-                    </div>
-                    <div class="content">
-                        <div class="author">Author</div>
-                        <div class="data">data</div>
-                        <a href="#"> Visit</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="card">
-                <div class="wrapper" data-image-src="./images/artwork2.jpeg">
-                    <div class="header">
-                        <div class="date">12-01-2019</div>
-                    </div>
-                    <div class="content">
-                        <div class="author">Author</div>
-                        <div class="data">data</div>
-                        <a href="#"> Visit</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                    <div class="wrapper" data-image-src="./images/artwork3.jpeg">
-                        <div class="header">
-                            <div class="date">12-01-2019</div>
-                        </div>
-                        <div class="content">
-                            <div class="author">Author</div>
-                            <div class="data">data</div>
-                            <a href="#"> Visit</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                        <div class="wrapper" data-image-src="./images/artwork4.jpeg">
-                            <div class="header">
-                                <div class="date">12-01-2019</div>
-                            </div>
-                            <div class="content">
-                                <div class="author">Author</div>
-                                <div class="data">data</div>
-                                <a href="#"> Visit</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                            <div class="wrapper" data-image-src="./images/artwork5.jpeg">
-                                <div class="header">
-                                    <div class="date">12-01-2019</div>
-                                </div>
-                                <div class="content">
-                                    <div class="author">Author</div>
-                                    <div class="data">data</div>
-                                    <a href="#"> Visit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                                <div class="wrapper" data-image-src="./images/artwork1.jpeg">
-                                    <div class="header">
-                                        <div class="date">12-01-2019</div>
-                                    </div>
-                                    <div class="content">
-                                        <div class="author">Author</div>
-                                        <div class="data">data</div>
-                                        <a href="#"> Visit</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                    <div class="wrapper" data-image-src="./images/artwork1.jpeg">
-                                        <div class="header">
-                                            <div class="date">12-01-2019</div>
-                                        </div>
-                                        <div class="content">
-                                            <div class="author">Author</div>
-                                            <div class="data">data</div>
-                                            <a href="#"> Visit</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                        <div class="wrapper" data-image-src="./images/artwork1.jpeg">
-                                            <div class="header">
-                                                <div class="date">12-01-2019</div>
-                                            </div>
-                                            <div class="content">
-                                                <div class="author">Author</div>
-                                                <div class="data">data</div>
-                                                <a href="#"> Visit</a>
-                                            </div>
-                                        </div>
-                                    </div>
         </div> <!--End Row-->
     </div> 
     <!-- container -->
