add sections in work

--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="preloader"></div>
+    <!-- <div class="preloader"></div> -->
     <header>
         <nav id="navbar">
             <div class="logo">LabArts</div>
@@ -43,7 +43,7 @@
             <a href="#" class="categort btn-primary" id="cover">Cover</a>
         </div>
         <div class="row">
-
+          
         </div> <!--End Row-->
     </div> 
     <!-- container -->
