--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Lab Art Media Works</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
@@ -150,37 +151,7 @@
 
             <div id="other">
 
-                <div class="card">
-                    <img src="images/artwork2.jpeg" alt="">
-                    <div class="middle">
-                        <div class="text">Durga Rangila</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/artwork1.jpeg" alt="">
-                    <div class="middle">
-                        <div class="text">Art</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/artwork4.jpeg" alt="">
-                    <div class="middle">
-                        <div class="text">Sooraj</div>
-                    </div>
-                </div>
-               
-                <div class="card">
-                    <img src="images/artwork5.jpeg" alt="">
-                    <div class="middle">
-                        <div class="text">Art</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/artwork3.jpeg" alt="">
-                    <div class="middle">
-                        <div class="text">Art</div>
-                    </div>
-                </div>
+
             </div>
         </section>
     </main>
